IVA update & other fix

--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod.cfg
@@ -185,7 +185,7 @@
 				PREFAB_PARTICLE
 				{
 					prefabName = fx_exhaustSparks_flameout_2
-					transformName = FXTransform
+					transformName = thrustTransform
 					oneShot = true
 				}
 				AUDIO
