--- a/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM-Internal.cfg
+++ b/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM-Internal.cfg
@@ -10,7 +10,7 @@ INTERNAL
 		name = InternalCameraSwitch
 		colliderTransformName = Windows_side_collider
 		cameraTransformName = Windows_side
-	}	
+	}
 	MODULE
 	{
 		name = InternalCameraSwitch
@@ -31,10 +31,18 @@ INTERNAL
 	}
 	MODULE
 	{
+		name = InternalCameraSwitch
+		colliderTransformName = DockingTrigger
+		cameraTransformName = DockingCam
+	}
+	MODULE
+	{
 		name = InternalSeat
 		seatTransformName = kerbalSeat1
 		portraitCameraName = PilotCam1
 		allowCrewHelmet = true
+		kerbalEyeOffset = 0, 0.02, 0
+		displayseatName = #autoLoc_6002190
 	}
 	MODULE
 	{
@@ -42,6 +50,8 @@ INTERNAL
 		seatTransformName = kerbalSeat2
 		portraitCameraName = PilotCam2
 		allowCrewHelmet = true
+		kerbalEyeOffset = 0, 0.02, 0
+		displayseatName = #autoLoc_6002190
 	}
 	MODULE
 	{
@@ -58,14 +68,14 @@ INTERNAL
 	PROP
 	{
 		name = Knes_Seat_Pilot
-		position = 0.3,0.25,0.529
+		position = 0.3,0.25,0.55
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Knes_Seat_Pilot
-		position = -0.3,0.25,0.529
+		position = -0.3,0.25,0.55
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
@@ -101,7 +111,7 @@ INTERNAL
 	{
 		name = AtmosphereDepth
 		position = -0.0543,0.9359,-0.0158
-		rotation = 6.755268E-08,0.7372772,0.6755905,9.685746E-08
+		rotation = 6.755268E-08,0.7372772,0.6755905,9.68574E-08
 		scale = 1.400007,1.400006,1.400005
 	}
 	PROP
@@ -127,22 +137,8 @@ INTERNAL
 	}
 	PROP
 	{
-		name = genericClusterSwitches06
-		position = 0.5712,0.7745,0.0451
-		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
-		scale = 1.000002,1.000003,1.000004
-	}
-	PROP
-	{
-		name = genericSwitchWithGuards
-		position = 0.652,0.7764,0.07780001
-		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
-		scale = 1.000002,1.000003,1.000004
-	}
-	PROP
-	{
 		name = genericClusterMixed
-		position = 0.2916,0.5613,0.0206
+		position = 0.0112,0.5539,0.0212
 		rotation = -3.744982E-08,0.7372774,0.6755902,4.936009E-08
 		scale = 1.000003,1.000003,1.000003
 	}
@@ -191,35 +187,35 @@ INTERNAL
 	PROP
 	{
 		name = pullSwitch
-		position = 0.2579,0.8365,-0.007100001
+		position = 0.2592,0.8365,-0.007100001
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000004,1.000004
 	}
 	PROP
 	{
 		name = pullSwitch
-		position = 0.2013,0.8365,-0.007100001
+		position = 0.2119,0.8365,-0.0071
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000003,1.000003
 	}
 	PROP
 	{
 		name = squareButton
-		position = 0.2279,0.8377487,-0.007186761
+		position = 0.2346,0.8377487,-0.0072
 		rotation = 1.411569E-07,0.7372774,0.6755902,2.225861E-07
 		scale = 1.000003,1.000003,1.000003
 	}
 	PROP
 	{
 		name = squareButton
-		position = -0.0123,0.8196,-0.005600002
+		position = -0.2322,0.8415,-0.0075
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000003,1.000003
 	}
 	PROP
 	{
 		name = ledPanelSpeed
-		position = 0.1656,0.5197,0.0207
+		position = 0.1592,0.8362,-0.007
 		rotation = -0.6755902,4.554167E-07,2.930296E-07,-0.7372774
 		scale = 1.000004,1.000003,1.000003
 	}
@@ -275,7 +271,7 @@ INTERNAL
 	PROP
 	{
 		name = genericClusterSwitches02
-		position = -0.1866,0.5428,0.0221
+		position = 0.0311,0.8323,-0.0032
 		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
 		scale = 0.700002,0.700001,0.7000011
 	}
@@ -296,49 +292,252 @@ INTERNAL
 	PROP
 	{
 		name = genericDirectionalKnob2
-		position = 0.1296,0.7218,0.009399999
+		position = -0.0797,0.5552,0.024
 		rotation = 0.6755902,0,0,0.7372773
 		scale = 1.000001,1.000003,1.000003
 	}
 	PROP
 	{
 		name = genericDirectionalKnob2
-		position = -0.3455,0.5622,0.0233
-		rotation = 0.6525702,-0.1908207,-0.1748552,0.7121553
-		scale = 1.000002,1.000003,1.000002
-	}
-	PROP
-	{
-		name = genericDirectionalKnob2
-		position = -0.2604,0.5624,0.0234
+		position = -0.3241,0.8006,0.0024
 		rotation = 1.772724E-10,0.7372773,0.6755903,2.514571E-08
 		scale = 1.000004,1.000003,1.000003
 	}
 	PROP
 	{
-		name = genericDirectionalKnob2
-		position = -0.3028,0.5623,0.0233
-		rotation = 0.2585371,-0.6811554,-0.624164,0.2821439
-		scale = 1.000003,1.000002,1.000003
-	}
-	PROP
-	{
 		name = genericClusterKnobs
-		position = -0.0427,0.7931,0.0034
+		position = -0.0439,0.8021001,0.0026
 		rotation = 0.4777143,0.521334,0.4777147,0.5213336
 		scale = 0.8000011,0.8000011,0.8000016
 	}
 	PROP
 	{
 		name = genericClusterKnobs
-		position = -0.0765,0.7949,0.003199998
+		position = -0.0777,0.8039001,0.002399998
 		rotation = -0.4777147,0.5213336,0.4777144,-0.5213339
 		scale = 0.800002,0.800002,0.8000023
 	}
 	PROP
 	{
 		name = genericClusterSwitches07
-		position = 0.1775,0.7192,0.0067
+		position = 0.058,0.7671,0.0025
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.7,0.7000001,0.7000001
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = 0.5849,0.7039,0.0595
+		rotation = -0.01075687,0.9810367,-0.03962529,0.1894233
+		scale = 1.304142,1.304142,1.304142
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.23,-0.04,0.724
+		rotation = -0.5,0.5,-0.5,0.5
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.23,-0.04,0.724
+		rotation = -0.5,0.5,-0.5,0.5
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Hatch_Plane
+		position = 1.192093E-07,0,-1.374
+		rotation = 0.2705981,0.6532815,0.6532815,0.2705981
+		scale = 1.722621,1.326502,1.352338
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.23,-0.6,0.724
+		rotation = -0.5,0.5,-0.5,0.5
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.23,-0.6,0.724
+		rotation = -0.5,0.5,-0.5,0.5
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = VSI
+		position = 0.2284,0.7833,0.0027
+		rotation = -0.6755902,-4.926696E-07,-5.257356E-07,-0.7372773
+		scale = 1.2,1.2,1.2
+	}
+	PROP
+	{
+		name = genericClusterSwitches07
+		position = 0.0051,0.7671,0.0025
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.7,0.7000001,0.7000001
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = 0.0784,0.6818,0.0131
+		rotation = 0.4777143,0.521334,0.4777147,0.5213336
+		scale = 0.8000003,0.8000003,0.8000004
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = -0.0777,0.6836,0.0129
+		rotation = -0.4777147,0.5213336,0.4777144,-0.5213339
+		scale = 0.8000003,0.8000001,0.8000004
+	}
+	PROP
+	{
+		name = MonitorDockingMode
+		position = -0.0003,0.6814,0.0113
+		rotation = 0.6740489,0,0,0.7386868
+		scale = 0.9,0.9,0.9
+	}
+	PROP
+	{
+		name = Button_DockingMode
+		position = 0.0429,0.6047,0.0137
+		rotation = -0.05577335,0,0,0.9984435
+		scale = 0.5,0.5,0.5
+	}
+	PROP
+	{
+		name = IndicatorPanel
+		position = 0.4161,0.6732,0.0206
+		rotation = 0.6750842,0,0,0.7377407
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = IndicatorPanel
+		position = -0.4161,0.6732,0.0206
+		rotation = 0.6750842,0,0,0.7377407
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = 0.3248,0.6818,0.0131
+		rotation = 0.4777143,0.521334,0.4777147,0.5213336
+		scale = 0.8000003,0.8000003,0.8000004
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = 0.3541,0.6836,0.0129
+		rotation = -0.4777147,0.5213336,0.4777144,-0.5213339
+		scale = 0.8000003,0.8000001,0.8000004
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = -0.3248,0.6818,0.0131
+		rotation = 0.4777143,0.521334,0.4777147,0.5213336
+		scale = 0.8000003,0.8000003,0.8000004
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = -0.3541,0.6836,0.0129
+		rotation = -0.4777147,0.5213336,0.4777144,-0.5213339
+		scale = 0.8000003,0.8000001,0.8000004
+	}
+	PROP
+	{
+		name = genericClusterSwitches02
+		position = 0.056,0.5126,0.0247
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.7,0.7000001,0.7000001
+	}
+	PROP
+	{
+		name = genericClusterSwitches07
+		position = 0.342,0.6002,0.0171
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.7,0.7000001,0.7000001
+	}
+	PROP
+	{
+		name = genericClusterSwitches07
+		position = -0.342,0.6002,0.0171
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.7,0.7000001,0.7000001
+	}
+	PROP
+	{
+		name = genericDirectionalKnob2
+		position = 0.0072,0.6054,0.0196
+		rotation = 0.6755902,0,0,0.7372773
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = genericDirectionalKnob2
+		position = -0.0238,0.6054,0.0196
+		rotation = 0.6755902,0,0,0.7372773
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = genericDirectionalKnob2
+		position = -0.0539,0.6054,0.0196
+		rotation = 0.6755902,0,0,0.7372773
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.659,-0.499,0.724
+		rotation = -0.5,0.5,-0.5,0.5
+		scale = 0.5871461,0.93,0.7206342
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.659,-0.499,0.724
+		rotation = -0.5,0.5,-0.5,0.5
+		scale = 0.58715,0.9299999,0.72063
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = 0.203,0.6493,0.0146
+		rotation = 0,0.9989961,-0.04479945,0
+		scale = 1.4,1.4,1.4
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = -0.203,0.6493,0.0146
+		rotation = 0,0.9989961,-0.04479945,0
+		scale = 1.400001,1.4,1.400002
+	}
+	PROP
+	{
+		name = genericClusterSwitches02
+		position = -0.056,0.5126,0.0247
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.7,0.7000001,0.7000001
+	}
+	PROP
+	{
+		name = genericClusterSwitches07
+		position = 0.1578,0.5192,0.0242
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.7,0.7000001,0.7000001
+	}
+	PROP
+	{
+		name = genericClusterSwitches07
+		position = -0.1578,0.5192,0.0242
 		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
 		scale = 0.7,0.7000001,0.7000001
 	}
