--- a/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM_R-Internal.cfg
+++ b/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM_R-Internal.cfg
@@ -10,7 +10,7 @@ INTERNAL
 		name = InternalCameraSwitch
 		colliderTransformName = Windows_side_collider
 		cameraTransformName = Windows_side
-	}		
+	}
 	MODULE
 	{
 		name = InternalCameraSwitch
@@ -35,6 +35,8 @@ INTERNAL
 		seatTransformName = kerbalSeat1
 		portraitCameraName = PilotCam1
 		allowCrewHelmet = true
+		kerbalEyeOffset = 0, 0.02, 0
+		displayseatName = #autoLoc_6002190
 	}
 	MODULE
 	{
@@ -42,6 +44,14 @@ INTERNAL
 		seatTransformName = kerbalSeat2
 		portraitCameraName = PilotCam2
 		allowCrewHelmet = true
+		kerbalEyeOffset = 0, 0.02, 0
+		displayseatName = #autoLoc_6002190
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = DockingTrigger
+		cameraTransformName = DockingCam
 	}
 	MODULE
 	{
@@ -70,14 +80,14 @@ INTERNAL
 	PROP
 	{
 		name = Knes_Seat_Pilot
-		position = 0.3,0.25,0.529
+		position = 0.3,0.25,0.55
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = Knes_Seat_Pilot
-		position = -0.3,0.25,0.529
+		position = -0.3,0.25,0.55
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
@@ -111,261 +121,408 @@ INTERNAL
 	}
 	PROP
 	{
+		name = NavBall
+		position = 0.0322,0.9396,-0.0284
+		rotation = 0.7933533,0,0,0.6087615
+		scale = 1.750003,1.750005,1.750004
+	}
+	PROP
+	{
+		name = AltimeterThreeHands
+		position = -0.1640001,0.8068328,0.01003467
+		rotation = -0.6755905,4.405155E-07,3.610194E-07,-0.7372771
+		scale = 1.500007,1.500007,1.500005
+	}
+	PROP
+	{
+		name = AtmosphereDepth
+		position = -0.0543,0.9359,-0.0158
+		rotation = 6.755268E-08,0.7372772,0.6755905,9.685738E-08
+		scale = 1.400007,1.400006,1.400005
+	}
+	PROP
+	{
+		name = AxisIndicatorPitch
+		position = 0.2831,0.7841,-0.002
+		rotation = 0.6755902,0,0,0.7372773
+		scale = 1.000001,1.000003,1.000003
+	}
+	PROP
+	{
+		name = AxisIndicatorRoll
+		position = 0.3767,0.7611,-0.000500001
+		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		scale = 1.000003,1.000004,1.000004
+	}
+	PROP
+	{
+		name = AxisIndicatorYaw
+		position = 0.3372,0.7897,-0.003700001
+		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		scale = 1.000003,1.000004,1.000004
+	}
+	PROP
+	{
+		name = genericClusterMixed
+		position = 0.0112,0.5539,0.0212
+		rotation = -3.744982E-08,0.7372774,0.6755902,4.936009E-08
+		scale = 1.000003,1.000003,1.000003
+	}
+	PROP
+	{
+		name = genericClusterSwitches02
+		position = 0.5355,0.5809,0.0474
+		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
+		scale = 0.5000029,0.5000032,0.5000019
+	}
+	PROP
+	{
+		name = genericClusterSwitches02
+		position = 0.6051,0.5834,0.0755
+		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
+		scale = 0.5000024,0.5000027,0.5000019
+	}
+	PROP
+	{
+		name = genericDirectionalKnob
+		position = 0.6569,0.5839,0.09649999
+		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
+		scale = 0.7500025,0.7500035,0.7500025
+	}
+	PROP
+	{
+		name = RadarAltimeter
+		position = 0.1481,0.7835,0.002799999
+		rotation = 0.6755902,2.561137E-07,1.443761E-07,0.7372774
+		scale = 1.200002,1.200002,1.200002
+	}
+	PROP
+	{
+		name = throttle
+		position = 0.0005000001,0.3976211,0.1528199
+		rotation = 0.08021284,0,0,0.9967778
+		scale = 1.000001,1.000001,1.000001
+	}
+	PROP
+	{
 		name = squareButton
-		position = 0.2279,0.8377487,-0.0068
+		position = 0.3207,0.7613,-0.000500001
+		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		scale = 1.000003,1.000004,1.000004
+	}
+	PROP
+	{
+		name = pullSwitch
+		position = 0.2592,0.8365,-0.007100001
+		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		scale = 1.000003,1.000004,1.000004
+	}
+	PROP
+	{
+		name = pullSwitch
+		position = 0.2119,0.8365,-0.0071
+		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		scale = 1.000003,1.000003,1.000003
+	}
+	PROP
+	{
+		name = squareButton
+		position = 0.2346,0.8377487,-0.0072
 		rotation = 1.411569E-07,0.7372774,0.6755902,2.225861E-07
-		scale = 1,1,1
+		scale = 1.000003,1.000003,1.000003
+	}
+	PROP
+	{
+		name = squareButton
+		position = -0.2322,0.8415,-0.0075
+		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		scale = 1.000003,1.000003,1.000003
+	}
+	PROP
+	{
+		name = ledPanelSpeed
+		position = 0.1592,0.8362,-0.007
+		rotation = -0.6755902,4.554167E-07,2.930296E-07,-0.7372774
+		scale = 1.000004,1.000003,1.000003
+	}
+	PROP
+	{
+		name = standingSwitch
+		position = 0.0752,0.7983,-0.003500002
+		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		scale = 1.000003,1.000004,1.000004
+	}
+	PROP
+	{
+		name = standingSwitch
+		position = 0.0582,0.7983,-0.003500002
+		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		scale = 1.000003,1.000003,1.000003
+	}
+	PROP
+	{
+		name = standingSwitch
+		position = 0.0415,0.7983,-0.003500002
+		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		scale = 1.000003,1.000003,1.000003
+	}
+	PROP
+	{
+		name = standingSwitch
+		position = 0.0244,0.7983,-0.003500002
+		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		scale = 1.000003,1.000003,1.000003
+	}
+	PROP
+	{
+		name = standingSwitch
+		position = 0.0066,0.7983,-0.003500002
+		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		scale = 1.000003,1.000003,1.000003
+	}
+	PROP
+	{
+		name = standingSwitch
+		position = -0.0116,0.7983,-0.003500002
+		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		scale = 1.000003,1.000003,1.000003
+	}
+	PROP
+	{
+		name = VSI
+		position = -0.2632,0.7902,0.0008999985
+		rotation = -0.6755902,-4.926696E-07,-5.257356E-07,-0.7372773
+		scale = 1.300003,1.300002,1.300002
+	}
+	PROP
+	{
+		name = genericClusterSwitches02
+		position = 0.0311,0.8323,-0.0032
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.700002,0.700001,0.7000011
 	}
 	PROP
 	{
 		name = genericClusterSwitches07
-		position = -0.3907,0.767,0.002886761
+		position = -0.3376,0.767,0.002499999
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.700002,0.700001,0.7000011
+	}
+	PROP
+	{
+		name = genericClusterSwitches07
+		position = -0.3907,0.767,0.002499999
 		rotation = 0.6755903,3.054738E-07,3.290146E-07,0.7372773
+		scale = 0.7000021,0.700002,0.7000018
+	}
+	PROP
+	{
+		name = genericDirectionalKnob2
+		position = -0.0797,0.5552,0.024
+		rotation = 0.6755902,0,0,0.7372773
+		scale = 1.000001,1.000003,1.000003
+	}
+	PROP
+	{
+		name = genericDirectionalKnob2
+		position = -0.3241,0.8006,0.0024
+		rotation = 1.772724E-10,0.7372773,0.6755903,2.514571E-08
+		scale = 1.000004,1.000003,1.000003
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = -0.0439,0.8021001,0.0026
+		rotation = 0.4777143,0.521334,0.4777147,0.5213336
+		scale = 0.8000011,0.8000011,0.8000016
+	}
+	PROP
+	{
+		name = genericClusterKnobs
+		position = -0.0777,0.8039001,0.002399998
+		rotation = -0.4777147,0.5213336,0.4777144,-0.5213339
+		scale = 0.800002,0.800002,0.8000023
+	}
+	PROP
+	{
+		name = genericClusterSwitches07
+		position = 0.058,0.7671,0.0025
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.7,0.7000001,0.7000001
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = 0.5849,0.7039,0.0595
+		rotation = -0.01075687,0.9810367,-0.03962529,0.1894233
+		scale = 1.304142,1.304142,1.304142
+	}
+	PROP
+	{
+		name = Hatch_Plane
+		position = 1.192093E-07,0,-1.374
+		rotation = 0.2705981,0.6532815,0.6532815,0.2705981
+		scale = 1.722621,1.326502,1.352338
+	}
+	PROP
+	{
+		name = VSI
+		position = 0.2284,0.7833,0.0027
+		rotation = -0.6755902,-4.926696E-07,-5.257356E-07,-0.7372773
+		scale = 1.2,1.2,1.2
+	}
+	PROP
+	{
+		name = genericClusterSwitches07
+		position = 0.0051,0.7671,0.0025
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
 		scale = 0.7,0.7000001,0.7000001
 	}
 	PROP
 	{
 		name = genericClusterKnobs
-		position = -0.0427,0.7931,0.003786761
+		position = 0.0784,0.6818,0.0131
 		rotation = 0.4777143,0.521334,0.4777147,0.5213336
 		scale = 0.8000003,0.8000003,0.8000004
 	}
 	PROP
 	{
-		name = AxisIndicatorPitch
-		position = 0.2831,0.7841,-0.001613239
-		rotation = 0.6755902,0,0,0.7372773
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = throttle
-		position = 0.0005000001,0.3976211,0.1532067
-		rotation = 0.08021284,0,0,0.9967778
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = pullSwitch
-		position = 0.2013,0.8365,-0.006713239
-		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = genericClusterSwitches07
-		position = 0.1775,0.7192,0.007086761
-		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
-		scale = 0.7,0.7000001,0.7000001
-	}
-	PROP
-	{
-		name = AxisIndicatorRoll
-		position = 0.3767,0.7611,-0.0001132395
-		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = genericDirectionalKnob2
-		position = 0.1296,0.7218,0.00978676
-		rotation = 0.6755902,0,0,0.7372773
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = standingSwitch
-		position = -0.0116,0.7983,-0.00311324
-		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = genericClusterMixed
-		position = 0.2916,0.5613,0.02098676
-		rotation = -3.744982E-08,0.7372774,0.6755902,4.936009E-08
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = standingSwitch
-		position = 0.0582,0.7983,-0.00311324
-		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = VSI
-		position = -0.2632,0.7902,0.00128676
-		rotation = -0.6755902,-4.926696E-07,-5.257356E-07,-0.7372773
-		scale = 1.3,1.3,1.3
-	}
-	PROP
-	{
-		name = genericClusterSwitches07
-		position = -0.3376,0.767,0.002886761
-		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
-		scale = 0.7,0.7000001,0.7000001
-	}
-	PROP
-	{
-		name = genericClusterSwitches06
-		position = 0.5712,0.7745,0.04548676
-		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = AtmosphereDepth
-		position = -0.0543,0.9359,-0.01541324
-		rotation = 6.755268E-08,0.7372772,0.6755905,9.68575E-08
-		scale = 1.400011,1.40001,1.400011
-	}
-	PROP
-	{
-		name = genericDirectionalKnob2
-		position = -0.2604,0.5624,0.02378676
-		rotation = 1.772724E-10,0.7372773,0.6755903,2.514571E-08
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = squareButton
-		position = -0.0123,0.8196,-0.00521324
-		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = NavBall
-		position = 0.0322,0.9396,-0.02801324
-		rotation = 0.7933533,0,0,0.6087615
-		scale = 1.75,1.75001,1.75
-	}
-	PROP
-	{
-		name = genericDirectionalKnob2
-		position = -0.3455,0.5622,0.02368676
-		rotation = 0.6525702,-0.1908207,-0.1748552,0.7121553
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = standingSwitch
-		position = 0.0415,0.7983,-0.00311324
-		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = squareButton
-		position = 0.3207,0.7613,-0.0001132395
-		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
-		scale = 1,1,1
-	}
-	PROP
-	{
-		name = ledPanelSpeed
-		position = 0.1656,0.5197,0.02108676
-		rotation = -0.6755902,4.554167E-07,2.930296E-07,-0.7372774
-		scale = 1,1,1
-	}
-	PROP
-	{
 		name = genericClusterKnobs
-		position = -0.0765,0.7949,0.00358676
+		position = -0.0777,0.6836,0.0129
 		rotation = -0.4777147,0.5213336,0.4777144,-0.5213339
 		scale = 0.8000003,0.8000001,0.8000004
 	}
 	PROP
 	{
-		name = pullSwitch
-		position = 0.2579,0.8365,-0.006713239
-		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		name = MonitorDockingMode
+		position = -0.0003,0.6814,0.0113
+		rotation = 0.6740489,0,0,0.7386868
+		scale = 0.9,0.9,0.9
+	}
+	PROP
+	{
+		name = Button_DockingMode
+		position = 0.0429,0.6047,0.0137
+		rotation = -0.05577335,0,0,0.9984435
+		scale = 0.5,0.5,0.5
+	}
+	PROP
+	{
+		name = IndicatorPanel
+		position = 0.4161,0.6732,0.0206
+		rotation = 0.6750842,0,0,0.7377407
 		scale = 1,1,1
 	}
 	PROP
 	{
-		name = genericClusterSwitches02
-		position = 0.5355,0.5809,0.04778676
-		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
-		scale = 0.5,0.5,0.5000001
-	}
-	PROP
-	{
-		name = genericClusterSwitches02
-		position = 0.6051,0.5834,0.07588676
-		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
-		scale = 0.5,0.5,0.5000001
-	}
-	PROP
-	{
-		name = standingSwitch
-		position = 0.0244,0.7983,-0.00311324
-		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		name = IndicatorPanel
+		position = -0.4161,0.6732,0.0206
+		rotation = 0.6750842,0,0,0.7377407
 		scale = 1,1,1
 	}
 	PROP
 	{
-		name = AltimeterThreeHands
-		position = -0.1640001,0.8068328,0.01042143
-		rotation = -0.6755905,4.405155E-07,3.610194E-07,-0.7372771
-		scale = 1.50001,1.50001,1.50001
+		name = genericClusterKnobs
+		position = 0.3248,0.6818,0.0131
+		rotation = 0.4777143,0.521334,0.4777147,0.5213336
+		scale = 0.8000003,0.8000003,0.8000004
 	}
 	PROP
 	{
-		name = AxisIndicatorYaw
-		position = 0.3372,0.7897,-0.00331324
-		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
-		scale = 1,1,1
+		name = genericClusterKnobs
+		position = 0.3541,0.6836,0.0129
+		rotation = -0.4777147,0.5213336,0.4777144,-0.5213339
+		scale = 0.8000003,0.8000001,0.8000004
 	}
 	PROP
 	{
-		name = genericDirectionalKnob2
-		position = -0.3028,0.5623,0.02368676
-		rotation = 0.2585371,-0.6811554,-0.624164,0.2821439
-		scale = 1,1,1
+		name = genericClusterKnobs
+		position = -0.3248,0.6818,0.0131
+		rotation = 0.4777143,0.521334,0.4777147,0.5213336
+		scale = 0.8000003,0.8000003,0.8000004
 	}
 	PROP
 	{
-		name = standingSwitch
-		position = 0.0752,0.7983,-0.00311324
-		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
-		scale = 1,1,1
+		name = genericClusterKnobs
+		position = -0.3541,0.6836,0.0129
+		rotation = -0.4777147,0.5213336,0.4777144,-0.5213339
+		scale = 0.8000003,0.8000001,0.8000004
 	}
 	PROP
 	{
-		name = RadarAltimeter
-		position = 0.1481,0.7835,0.00318676
-		rotation = 0.6755902,2.561137E-07,1.443761E-07,0.7372774
-		scale = 1.2,1.2,1.2
-	}
-	PROP
-	{
-		name = genericDirectionalKnob
-		position = 0.6569,0.5839,0.09688676
-		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
-		scale = 0.75,0.7500001,0.7500001
-	}
-	PROP
-	{
-		name = genericClusterSwitches02
-		position = -0.1866,0.5428,0.02248676
+		name = genericClusterSwitches07
+		position = 0.342,0.6002,0.0171
 		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
 		scale = 0.7,0.7000001,0.7000001
 	}
 	PROP
 	{
-		name = standingSwitch
-		position = 0.0066,0.7983,-0.00311324
-		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
+		name = genericClusterSwitches07
+		position = -0.342,0.6002,0.0171
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.7,0.7000001,0.7000001
+	}
+	PROP
+	{
+		name = genericDirectionalKnob2
+		position = 0.0072,0.6054,0.0196
+		rotation = 0.6755902,0,0,0.7372773
 		scale = 1,1,1
 	}
 	PROP
 	{
-		name = genericSwitchWithGuards
-		position = 0.652,0.7764,0.07818677
-		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
+		name = genericDirectionalKnob2
+		position = -0.0238,0.6054,0.0196
+		rotation = 0.6755902,0,0,0.7372773
 		scale = 1,1,1
+	}
+	PROP
+	{
+		name = genericDirectionalKnob2
+		position = -0.0539,0.6054,0.0196
+		rotation = 0.6755902,0,0,0.7372773
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = 0.203,0.6493,0.0146
+		rotation = 0,0.9989961,-0.04479945,0
+		scale = 1.400003,1.4,1.400004
+	}
+	PROP
+	{
+		name = genericClusterSwitches07
+		position = -0.1578,0.5192,0.0242
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.7,0.7000002,0.7000002
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = -0.203,0.6493,0.0146
+		rotation = 0,0.9989961,-0.04479945,0
+		scale = 1.400003,1.4,1.400004
+	}
+	PROP
+	{
+		name = genericClusterSwitches02
+		position = 0.056,0.5126,0.0247
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.7,0.7000002,0.7000002
+	}
+	PROP
+	{
+		name = genericClusterSwitches02
+		position = -0.056,0.5126,0.0247
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.7,0.7000002,0.7000002
+	}
+	PROP
+	{
+		name = genericClusterSwitches07
+		position = 0.1578,0.5192,0.0242
+		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
+		scale = 0.7,0.7000002,0.7000002
 	}
 }
