--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Parachute.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Parachute.cfg
@@ -45,6 +45,7 @@ PART
 	breakingTorque = 50
 	bodyLiftMultiplier = 0
 	stageOffset = -1
+	stackSymmetry = 2	
 	bulkheadProfiles = srf
 	tags = arrest blue canopy chute decel descen drag entry fall landing re- return safe slow MRK Knes
 	MODULE
@@ -65,161 +66,6 @@ PART
 		deploymentSpeed = 0.12
 		semiDeploymentSpeed = 0.5
 		chuteMaxTemp = 650
-	}
-	MODULE
-	{
-		name = ModuleTestSubject
-		useStaging = True
-		useEvent = False
-		situationMask = 8
-		CONSTRAINT
-		{
-			type = ATMOSPHERE
-			value = True
-		}
-		CONSTRAINT
-		{
-			type = SPEEDENV
-			test = LT
-			value = 200
-			prestige = Trivial
-		}
-		CONSTRAINT
-		{
-			type = SPEEDENV
-			test = GT
-			value = 100
-			prestige = Trivial
-		}
-		CONSTRAINT
-		{
-			type = SPEEDENV
-			test = LT
-			value = 100
-			prestige = Significant
-		}
-		CONSTRAINT
-		{
-			type = SPEEDENV
-			test = GT
-			value = 50
-			prestige = Significant
-		}
-		CONSTRAINT
-		{
-			type = SPEEDENV
-			test = LT
-			value = 50
-			prestige = Exceptional
-		}
-		CONSTRAINT
-		{
-			type = SPEEDENV
-			test = GT
-			value = 20
-			prestige = Exceptional
-		}
-		CONSTRAINT
-		{
-			type = DENSITY
-			test = GT
-			value = 0.2
-			prestige = Trivial
-		}
-		CONSTRAINT
-		{
-			type = DENSITY
-			test = GT
-			value = 0.1
-			prestige = Significant
-		}
-		CONSTRAINT
-		{
-			type = DENSITY
-			test = GT
-			value = 0.02
-			prestige = Exceptional
-		}
-		CONSTRAINT
-		{
-			type = ALTITUDE
-			test = GT
-			value = 1000
-		}
-		CONSTRAINT
-		{
-			type = ALTITUDEENV
-			test = GT
-			value = 4000
-			prestige = Trivial
-		}
-		CONSTRAINT
-		{
-			type = ALTITUDEENV
-			test = LT
-			value = 8000
-			prestige = Trivial
-		}
-		CONSTRAINT
-		{
-			type = ALTITUDEENV
-			test = GT
-			value = 2000
-			prestige = Significant
-		}
-		CONSTRAINT
-		{
-			type = ALTITUDEENV
-			test = LT
-			value = 4000
-			prestige = Significant
-		}
-		CONSTRAINT
-		{
-			type = ALTITUDEENV
-			test = GT
-			value = 1000
-			prestige = Exceptional
-		}
-		CONSTRAINT
-		{
-			type = ALTITUDEENV
-			test = LT
-			value = 2000
-			prestige = Exceptional
-		}
-		CONSTRAINT
-		{
-			type = SPEED
-			test = LT
-			value = 300
-			body = _Home
-		}
-		CONSTRAINT
-		{
-			type = SPEED
-			test = LT
-			value = 1000
-			body = _NotHome
-		}
-		CONSTRAINT
-		{
-			type = REPEATABILITY
-			value = ALWAYS
-			prestige = Trivial
-		}
-		CONSTRAINT
-		{
-			type = REPEATABILITY
-			value = BODYANDSITUATION
-			prestige = Significant
-		}
-		CONSTRAINT
-		{
-			type = REPEATABILITY
-			value = ONCEPERPART
-			prestige = Exceptional
-		}
 	}
 	MODULE
 	{
