--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod_Rescue.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod_Rescue.cfg
@@ -194,7 +194,7 @@ PART
 				PREFAB_PARTICLE
 				{
 					prefabName = fx_exhaustSparks_flameout_2
-					transformName = FXTransform
+					transformName = thrustTransform
 					oneShot = true
 				}
 				AUDIO
