--- a/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM-Internal.cfg
+++ b/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM-Internal.cfg
@@ -40,7 +40,7 @@ INTERNAL
 		name = InternalSeat
 		seatTransformName = kerbalSeat1
 		portraitCameraName = PilotCam1
-		allowCrewHelmet = false
+		allowCrewHelmet = true
 		kerbalEyeOffset = 0, 0.02, 0
 		displayseatName = #autoLoc_6002190
 	}
@@ -49,7 +49,7 @@ INTERNAL
 		name = InternalSeat
 		seatTransformName = kerbalSeat2
 		portraitCameraName = PilotCam2
-		allowCrewHelmet = false
+		allowCrewHelmet = true
 		kerbalEyeOffset = 0, 0.02, 0
 		displayseatName = #autoLoc_6002190
 	}
@@ -57,13 +57,13 @@ INTERNAL
 	{
 		name = InternalSeat
 		seatTransformName = kerbalSeat3
-		allowCrewHelmet = false
+		allowCrewHelmet = true
 	}
 	MODULE
 	{
 		name = InternalSeat
 		seatTransformName = kerbalSeat4
-		allowCrewHelmet = false
+		allowCrewHelmet = true
 	}
 	PROP
 	{
