--- a/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM_R-Internal.cfg
+++ b/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM_R-Internal.cfg
@@ -34,7 +34,7 @@ INTERNAL
 		name = InternalSeat
 		seatTransformName = kerbalSeat1
 		portraitCameraName = PilotCam1
-		allowCrewHelmet = false
+		allowCrewHelmet = true
 		kerbalEyeOffset = 0, 0.02, 0
 		displayseatName = #autoLoc_6002190
 	}
@@ -43,7 +43,7 @@ INTERNAL
 		name = InternalSeat
 		seatTransformName = kerbalSeat2
 		portraitCameraName = PilotCam2
-		allowCrewHelmet = false
+		allowCrewHelmet = true
 		kerbalEyeOffset = 0, 0.02, 0
 		displayseatName = #autoLoc_6002190
 	}
@@ -57,25 +57,25 @@ INTERNAL
 	{
 		name = InternalSeat
 		seatTransformName = kerbalSeat3
-		allowCrewHelmet = false
+		allowCrewHelmet = true
 	}
 	MODULE
 	{
 		name = InternalSeat
 		seatTransformName = kerbalSeat4
-		allowCrewHelmet = false
+		allowCrewHelmet = true
 	}
 	MODULE
 	{
 		name = InternalSeat
 		seatTransformName = kerbalSeat5
-		allowCrewHelmet = false
+		allowCrewHelmet = true
 	}
 	MODULE
 	{
 		name = InternalSeat
 		seatTransformName = kerbalSeat6
-		allowCrewHelmet = false
+		allowCrewHelmet = true
 	}
 	PROP
 	{
