--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Parachute.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Parachute.cfg
@@ -26,7 +26,7 @@ PART
 	buoyancyUseCubeNamed = PACKED
 	sound_parachute_open = activate
 	sound_parachute_single = deploy
-	TechRequired = survivability
+	TechRequired = landing
 	entryCost = 2800
 	cost = 400
 	category = Utility
