--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod.cfg
@@ -40,7 +40,7 @@
 	bouyancyUseSine = False
 	bouyancy = 1.1
 	CoLOffset = 0.0, 0.0, 0.0
-	TechRequired = commandModules
+	TechRequired = spaceExploration
 	entryCost = 8000
 	cost = 4000
 	category = Pods
