--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Extended.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Extended.cfg
@@ -30,7 +30,7 @@ PART
 // --- Sound FX definition ---
 	sound_decoupler_fire = decouple
 		
-	TechRequired = commandModule
+	TechRequired = commandModules
 	entryCost = 5500
 	cost = 1850
 	category = Utility
