--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Rescue.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Rescue.cfg
@@ -26,7 +26,7 @@ PART
 // --- Sound FX definition ---
 	sound_decoupler_fire = decouple
 	
-	TechRequired = commandModule
+	TechRequired = spaceExploration
 	entryCost = 5500
 	cost = 1850
 	category = Utility
