--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SolarPanel_Pyld.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SolarPanel_Pyld.cfg
@@ -13,7 +13,7 @@ node_stack_top = 0.0, 0.025, 0.0, 0, 1, 0, 1
 node_attach = 0.0, 0.05, 0.0, 0, 1, 0
 attachRules = 1,1,0,0,0
 
-TechRequired = advElectrics
+TechRequired = electrics
 entryCost = 4000
 cost = 450
 category = Electrical
