MRK Fuel Crossfeed Fix

--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Decoupler.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Decoupler.cfg
@@ -32,7 +32,7 @@ PART
 	breakingForce = 200
 	breakingTorque = 200
 	maxTemp = 2000 // = 3400
-	fuelCrossFeed = False
+	fuelCrossFeed = True
 	stageOffset = 1
 	childStageOffset = 1
 	bulkheadProfiles = size2
