--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_HeatSheild.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_HeatSheild.cfg
@@ -37,13 +37,14 @@ PART
 	breakingTorque = 200
 	crashTolerance = 9
 	maxTemp = 3300
-	fuelCrossFeed = False
+	fuelCrossFeed = True
 	PhysicsSignificance = 0
 	stageOffset = 1
 	childStageOffset = 1
 	bulkheadProfiles = size2
 	thermalMassModifier = 1.0
 	tags = ablat drag entry insulate protect re- rocket therm MRK Knes
+	
 	MODULE
 	{
 		name = ModuleJettison
