--- a/GameData/Knes/Parts/Core/Antenna/_Knes_DirectAntenna_bread.cfg
+++ b/GameData/Knes/Parts/Core/Antenna/_Knes_DirectAntenna_bread.cfg
@@ -71,5 +71,23 @@ PART
 		antennaCombinable = True
 		antennaCombinableExponent = 1
 	}
-	
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+
+			TEXTURE
+			{
+				materialName = Knes_antenna
+				mainTextureURL = Knes/Parts/Core/Antenna/Knes_antenna_Black
+			}
+		}
+	}	
 }
