--- a/GameData/Knes/Parts/Core/Parachute/_Knes_Paraglider_Steerable_srf.cfg
+++ b/GameData/Knes/Parts/Core/Parachute/_Knes_Paraglider_Steerable_srf.cfg
@@ -84,5 +84,24 @@ PART:NEEDS[RetractableLiftingSurface]
 		ctrlSurfaceArea = 1.0
 		actuatorSpeed = 25
 		transformName = CtrlSrf
-	}	
+	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+
+			TEXTURE
+			{
+				materialName = Paraglider_box
+				mainTextureURL = Knes/Parts/Core/Parachute/Paraglider_box_Black
+			}
+		}
+	}		
 }
