--- a/GameData/Knes/Parts/Spacecraft/_Knes_Cargo_Pod_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Cargo_Pod_09375.cfg
@@ -198,5 +198,28 @@ PART
 		name = Crystal
 		amount = 0
 		maxAmount = 500
+	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = EndCap_0625
+				mainTextureURL = Knes/Parts/Spacecraft/EndCap_0625_Black
+			}
+			TEXTURE
+			{
+				materialName = Crew_Pod_09375
+				mainTextureURL = Knes/Parts/Spacecraft/Crew_Pod_09375_Black
+			}
+		}
 	}	
 }
