--- a/GameData/Knes/Parts/Spacecraft/_Knes_EscapeTower_Small.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_EscapeTower_Small.cfg
@@ -138,4 +138,23 @@ PART
 			}
 		}
 	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+
+			TEXTURE
+			{
+				materialName = Viking_Service_Module_09375
+				mainTextureURL = Knes/Parts/Spacecraft/Viking_Service_Module_09375_Black
+			}
+		}
+	}	
 }
