--- a/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_EndCap_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_EndCap_09375.cfg
@@ -89,5 +89,27 @@ PART
             key = 0 1
         }
     }
-	
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = EndCap_0625
+				mainTextureURL = Knes/Parts/Spacecraft/EndCap_0625_Black
+			}
+			TEXTURE
+			{
+				materialName = Station_Module_Hab
+				mainTextureURL = Knes/Parts/Spacecraft/Station_Module_Hab_Black
+			}
+		}
+	}		
 }
