--- a/GameData/Knes/Parts/Spacecraft/_Knes_Structural_EndCap_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Structural_EndCap_0625.cfg
@@ -36,5 +36,22 @@ PART
 	maxTemp = 2000 // = 3400
 	bulkheadProfiles = size0, srf
 	tags = knes berth capture connect couple dock fasten join moor socket
-	
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = EndCap_0625
+				mainTextureURL = Knes/Parts/Spacecraft/EndCap_0625_Black
+			}
+		}
+	}	
 }
