--- a/GameData/Knes/Parts/Spacecraft/_Knes_Structural_Node_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Structural_Node_0625.cfg
@@ -75,5 +75,23 @@ PART
         {
             key = 0 1
         }
-    }	
+    }
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = EndCap_0625
+				mainTextureURL = Knes/Parts/Spacecraft/EndCap_0625_Black
+			}
+		}
+	}	
 }
