--- a/GameData/Knes/Parts/LiftingsBodies/StarWatcher/_Knes_Pod_StarWatcher.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarWatcher/_Knes_Pod_StarWatcher.cfg
@@ -234,5 +234,39 @@ PART
 		amount = 0
 		maxAmount = 100
 	}
-
+	MODULE
+	{
+		name = ModulePartVariants
+		baseVariant = MK1
+		VARIANT
+		{
+			name = MK1
+			displayName = MK1
+			primaryColor = #ffffff
+			secondaryColor = #999999
+			TEXTURE
+			{
+				materialName=Pod_StarWatcher
+				shader = KSP/Bumped Specular
+				_MainTex = Knes/Parts/LiftingsBodies/StarWatcher/Pod_StarWatcher
+				_BumpMap = Knes/Parts/LiftingsBodies/StarWatcher/Pod_StarWatcher_bumpmap				
+			}		
+		}	
+		VARIANT
+		{
+			name = MK2
+			displayName =  MK2
+			primaryColor = #d96200
+			secondaryColor = #999999
+			TEXTURE
+			{
+				materialName=Pod_StarWatcher
+				shader = KSP/Bumped Specular (Mapped)
+				_MainTex = Knes/Parts/LiftingsBodies/StarWatcher/Pod_StarWatcher_Metal
+				_BumpMap = Knes/Parts/LiftingsBodies/StarWatcher/Pod_StarWatcher_bumpmap	
+				_SpecMap = Knes/Parts/LiftingsBodies/StarWatcher/Pod_StarWatcher_Metal_specular	
+				_Shininess = 0.7
+			}			
+		}		
+	}	
 }
