--- a/GameData/Knes/Parts/Spacecraft/_Knes_Heatshield_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Heatshield_09375.cfg
@@ -108,5 +108,22 @@ PART
 			amount = 20
 			maxAmount = 20
 	}	
-
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = Crew_Pod_09375
+				mainTextureURL = Knes/Parts/Spacecraft/Crew_Pod_09375_Black
+			}
+		}
+	}
 }
