--- a/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_FuelTank_Nano_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_FuelTank_Nano_09375.cfg
@@ -48,4 +48,22 @@ PART
 		amount = 13
 		maxAmount = 13
 	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = EndCap_0625
+				mainTextureURL = Knes/Parts/Spacecraft/EndCap_0625_Black
+			}
+		}
+	}
 }
