--- a/GameData/Knes/Parts/Spacecraft/_Knes_Service_Module_Viking_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Service_Module_Viking_09375.cfg
@@ -252,5 +252,24 @@ PART
 		name = MonoPropellant
 		amount = 15
 		maxAmount = 15
+	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+
+			TEXTURE
+			{
+				materialName = Viking_Service_Module_09375
+				mainTextureURL = Knes/Parts/Spacecraft/Viking_Service_Module_09375_Black
+			}
+		}
 	}	
 }
