--- a/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_CrystalFactory.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_CrystalFactory.cfg
@@ -126,5 +126,27 @@ PART
 		amount = 0
 		maxAmount = 1000
 	}
-
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = EndCap_0625
+				mainTextureURL = Knes/Parts/Spacecraft/EndCap_0625_Black
+			}
+			TEXTURE
+			{
+				materialName = Station_Module_Hab
+				mainTextureURL = Knes/Parts/Spacecraft/Station_Module_Hab_Black
+			}
+		}
+	}	
 }
