--- a/GameData/Knes/Parts/Spacecraft/_Knes_Utility_Adapter_09375_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Utility_Adapter_09375_0625.cfg
@@ -187,5 +187,27 @@ PART
         }
     }	
 	
-	
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Black
+			displayName = Black
+			primaryColor = #333434
+			TEXTURE
+			{
+				materialName = EndCap_0625
+				mainTextureURL = Knes/Parts/Spacecraft/EndCap_0625_Black
+			}
+			TEXTURE
+			{
+				materialName = Viking_Service_Module_09375
+				mainTextureURL = Knes/Parts/Spacecraft/Viking_Service_Module_09375_Black
+			}
+		}
+	}	
 }
